--- a/pages/movie/movie.wxss
+++ b/pages/movie/movie.wxss
@@ -1,1 +1,19 @@
 /* pages/movie/movie.wxss */
+@import "movieTemplate/movieTemplate.wxss";
+.search{
+  display: flex;
+  display: -webkit-flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #eee;
+  width: 750rpx;
+  height: 80rpx;
+}
+.search input{
+  width: 500rpx;
+}
+.search image{
+  width: 30rpx;
+  height: 30rpx;
+  /* display:none; */
+}
